# bootcamp

./: .gitignore  LICENSE  pyproject.toml
example_scripts/suitcase/: patterns.json  staticmap_generator.py  stops.json  vehicles.json
main/main/: settings.py
main/suitcase/: apps.py
